Comment out invitation key request
Until we have a contact person to request from.

--- a/ui/src/app/views/invitation-key/component.html
+++ b/ui/src/app/views/invitation-key/component.html
@@ -14,6 +14,8 @@
     <button id="next" (click)="next()" class="btn btn-primary" style="width: 10rem; height: 2rem">
       Next
     </button>
+    <!-- 
+    TODO: Find a contact person to re-implement
     <h4>Need an invitation key?</h4>
     <input type="text" class="input" [(ngModel)]="invitationKeyRequestEmail" placeholder="Email Address" style="display: block;">
     <button id="requestKey" (click)="requestKey()" class="btn btn-secondary" style="width: 9rem; height: 1.8rem">
@@ -22,6 +24,7 @@
     <div *ngIf="requestSent">
       <strong> The invitation key request has been sent.</strong>
     </div>
+    -->
   </div>
   <div *ngIf="invitationKeyVerifed">
     <app-account-creation></app-account-creation>
