test fixes (they still fail)

--- a/ui/src/app/views/workspace-share/component.html
+++ b/ui/src/app/views/workspace-share/component.html
@@ -1,4 +1,4 @@
-<clr-modal [(clrModalOpen)]="sharing" [clrModalSize]="'lg'" *ngIf="workspace else notFoundMessage">
+<clr-modal [(clrModalOpen)]="sharing" [clrModalSize]="'lg'">
   <div class="modal-title">
     <h3 class="modal-title-text">Share {{workspace.name}}</h3>
   </div>
