--- a/ui/src/app/views/workspace/component.html
+++ b/ui/src/app/views/workspace/component.html
@@ -150,7 +150,7 @@
             Data Access Level
           </div>
           <div class="information-body">
-            {{workspace.dataAccessLevel}}
+            {{workspace.dataAccessLevel | titlecase}}
           </div>
         </div>
       </div>
