--- a/ui/src/app/views/workspace/component.html
+++ b/ui/src/app/views/workspace/component.html
@@ -53,12 +53,12 @@
               Clone
             </button>
             <button class="action-item"
-                    routerLink="{{document.location.pathname}}/cohorts/{{cohort.id}}/edit">
+                    routerLink="cohorts/{{cohort.id}}/edit">
               <clr-icon shape="pencil"></clr-icon>
               Edit
             </button>
             <button class="action-item"
-                    routerLink="{{document.location.pathname}}/cohorts/{{cohort.id}}/review">
+                    routerLink="cohorts/{{cohort.id}}/review">
               <clr-icon shape="grid-view"></clr-icon>
               Review
             </button>
