--- a/ui/src/app/views/workspace-nav-bar/component.html
+++ b/ui/src/app/views/workspace-nav-bar/component.html
@@ -7,28 +7,37 @@
     This is to be added when we have cards for notebooks, because that will show just the most recent.
     <button class="btn btn-primary btn-top">Notebooks</button>
   -->
-  <button class="btn btn-primary btn-top" [class.awaiting-review]="awaitingReview" [disabled]="awaitingReview"
-          [routerLink]="['/workspace', wsNamespace, wsId, 'cohorts', 'build']">
-    Cohort Builder
-  </button>
+  <span role="tooltip" aria-haspopup="true" class="tooltip tooltip-md tooltip-top-right">
+    <button class="btn btn-primary btn-top" [class.awaiting-review]="awaitingReview" [disabled]="awaitingReview"
+            [routerLink]="['/workspace', wsNamespace, wsId, 'cohorts', 'build']">
+      Cohort Builder
+    </button>
+    <span *ngIf="awaitingReview" class="tooltip-content">Workspace is awaiting review</span>
+  </span>
   <div class="btn-group-overflow open bottom-right">
     <button class="btn-top btn btn-overflow" (click)="dropdownOpen = !dropdownOpen">
       <clr-icon shape="ellipsis-horizontal"></clr-icon>
     </button>
     <div *ngIf="dropdownOpen" class="dropdown-menu">
-      <button class="btn" [disabled]="!writePermission" [routerLink]="['/workspace', wsNamespace, wsId, 'edit']"
-              routerLinkActive="active">
-        Edit
-      </button>
+      <span role="tooltip" aria-haspopup="true" class="tooltip tooltip-sm tooltip-top-left">
+        <button class="btn" [disabled]="!writePermission" [routerLink]="['/workspace', wsNamespace, wsId, 'edit']"
+                routerLinkActive="active">
+          Edit
+        </button>
+        <span *ngIf="!writePermission" class="tooltip-content">Requires Write Permission</span>
+      </span>
       <button class="btn" [routerLink]="['/workspace', wsNamespace, wsId, 'share']" routerLinkActive="active">
         Share
       </button>
       <button class="btn" [routerLink]="['/workspace', wsNamespace, wsId, 'clone']" routerLinkActive="active">
         Clone
       </button>
-      <button class="btn" [disabled]="!ownerPermission" (click)="delete()">
-        Delete
-      </button>
+      <span role="tooltip" aria-haspopup="true" class="tooltip tooltip-sm tooltip-top-left">
+        <button class="btn" [disabled]="!ownerPermission" (click)="delete()">
+          Delete
+        </button>
+        <span *ngIf="!ownerPermission" class="tooltip-content">Requires Owner Permission</span>
+      </span>
     </div>
   </div>
 </div>
