--- a/ui/src/app/views/workspace-share/component.css
+++ b/ui/src/app/views/workspace-share/component.css
@@ -17,7 +17,7 @@ input.share, .sharing-buttons {
   text-transform: uppercase;
 }
 
-.sharing-buttons {
+.sharing-buttons, .add-button {
   width: auto;
   font-size: 0.5rem;
 }
