--- a/ui/src/app/views/signed-in/component.html
+++ b/ui/src/app/views/signed-in/component.html
@@ -5,8 +5,9 @@
           style="width: 1.5rem; height: 1.5rem; fill: #6cace4"></clr-icon>
     </div>
     <img [src]="headerImg" class="header-image" routerLink="/">
+    <breadcrumb></breadcrumb>
   </div>
-  <clr-dropdown style="margin-right: 1rem; margin-bottom: 0.5rem;">
+    <clr-dropdown style="margin-right: 1rem; margin-bottom: 0.5rem;">
     <div style="display: flex; justify-content: space-around; align-items: center" clrDropdownTrigger>
       <img [src]="profileImage" style="border-radius: 100px; height: 42px; width: 42px">
       <h6 style="padding: 0.5rem;">
