--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -93,36 +93,14 @@ input[type=text]:focus, input[type=password]:focus {
 /*
  * Override clarity fonts
  */
-body {
-  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-}
-html {
-  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-}
-.login {
-  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-}
-.login-wrapper .login .title {
-  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-}
-.login-wrapper .login .trademark {
-  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-}
-.login-wrapper .login .subtitle {
-  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-}
-.modal-header .modal-title {
-  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-}
-.header .branding .title {
-  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-}
-.sidenav .sidenav-content > .nav-link {
-  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-}
-.sidenav .nav-group label {
-  font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
-}
+body, html, .login,
+.login-wrapper .login .title,
+.login-wrapper .login .trademark,
+.login-wrapper .login .subtitle,
+.modal-header .modal-title,
+.header .branding .title,
+.sidenav .sidenav-content > .nav-link,
+.sidenav .nav-group label,
 h1, h2, h3, h4, h5, h6 {
   font-family: "Gotham SSm A", "Gotham SSm B", sans-serif;
 }
@@ -131,23 +109,10 @@ h1, h2, h3, h4, h5, h6 {
 /*
  * Override clarity font weights. They default to 400 for normal, we want 300.
  */
-body {
-  font-weight: 300;
-}
-body p {
-  font-weight: 300;
-}
-.btn {
-  font-weight: 300;
-}
+body, body p, .btn,
 .btn.btn-sm, .alert-app-level .alert-item .btn,
-.btn-sm .btn, .alert-app-level .alert-item .btn .btn {
-  font-weight: 300;
-}
-
-.btn-group.btn-sm .btn-group-overflow > .dropdown-toggle, .alert-app-level .alert-item .btn-group.btn .btn-group-overflow > .dropdown-toggle {
-  font-weight: 300;
-}
+.btn-sm .btn, .alert-app-level .alert-item .btn .btn,
+.btn-group.btn-sm .btn-group-overflow > .dropdown-toggle, .alert-app-level .alert-item .btn-group.btn .btn-group-overflow > .dropdown-toggle,
 .dropdown-menu .btn,
 .dropdown-menu .btn-secondary,
 .dropdown-menu .btn-info,
@@ -162,81 +127,35 @@ body p {
 .dropdown-menu .btn-warning,
 .dropdown-menu .btn-success,
 .dropdown-menu .btn-link,
-.dropdown-menu .dropdown-item {
-  font-weight: 300;
-}
-.label, a.label {
-  font-weight: 300;
-}
+.dropdown-menu .dropdown-item,
+.label, a.label,
 header .branding .title,
-.header .branding .title {
-  font-weight: 300;
-}
+.header .branding .title,
 header .header-nav .nav-text,
-.header .header-nav .nav-text {
-  font-weight: 300;
-}
+.header .header-nav .nav-text,
 header .settings .nav-text,
 header .header-actions .nav-text,
 .header .settings .nav-text,
-.header .header-actions .nav-text {
-  font-weight: 300;
-}
-.nav .nav-link {
-  font-weight: 300;
-}
-.sidenav .sidenav-content > .nav-link {
-  font-weight: 300;
-}
-.sidenav .nav-group {
-  font-weight: 300;
-}
-.sidenav .nav-group label {
-  font-weight: 300;
-}
-.clr-vertical-nav.has-nav-groups .nav-group-children .nav-link {
-  font-weight: 300;
-}
-.tooltip.tooltip-top-right > .tooltip-content, .tooltip .tooltip-content.tooltip-top-right {
-  font-weight: 300;
-}
-.tooltip.tooltip-top-left > .tooltip-content, .tooltip .tooltip-content.tooltip-top-left {
-  font-weight: 300;
-}
-.tooltip.tooltip-bottom-right > .tooltip-content, .tooltip .tooltip-content.tooltip-bottom-right {
-  font-weight: 300;
-}
-.tooltip.tooltip-bottom-left > .tooltip-content, .tooltip .tooltip-content.tooltip-bottom-left {
-  font-weight: 300;
-}
-.tooltip.tooltip-right > .tooltip-content, .tooltip .tooltip-content.tooltip-right {
-  font-weight: 300;
-}
-.tooltip.tooltip-left > .tooltip-content, .tooltip .tooltip-content.tooltip-left {
-  font-weight: 300;
-}
+.header .header-actions .nav-text,
+.nav .nav-link,
+.sidenav .sidenav-content > .nav-link,
+.sidenav .nav-group,
+.sidenav .nav-group label,
+.clr-vertical-nav.has-nav-groups .nav-group-children .nav-link,
+.tooltip.tooltip-top-right > .tooltip-content, .tooltip .tooltip-content.tooltip-top-right,
+.tooltip.tooltip-top-left > .tooltip-content, .tooltip .tooltip-content.tooltip-top-left,
+.tooltip.tooltip-bottom-right > .tooltip-content, .tooltip .tooltip-content.tooltip-bottom-right,
+.tooltip.tooltip-bottom-left > .tooltip-content, .tooltip .tooltip-content.tooltip-bottom-left,
+.tooltip.tooltip-right > .tooltip-content, .tooltip .tooltip-content.tooltip-right,
+.tooltip.tooltip-left > .tooltip-content, .tooltip .tooltip-content.tooltip-left,
 form .form-block > label,
-.form .form-block > label {
-  font-weight: 300;
-}
-.stack-view {
-  font-weight: 300;
-}
-.stack-view .stack-block-label {
-  font-weight: 300;
-}
-.datagrid .datagrid-column .datagrid-filter, .datagrid .datagrid-head .datagrid-row-actions .datagrid-filter {
-  font-weight: 300;
-}
-.datagrid .datagrid-body .datagrid-row .datagrid-action-overflow {
-  font-weight: 300;
-}
-.datagrid-foot .column-switch-wrapper .column-switch .switch-header {
-  font-weight: 300;
-}
-.clr-wizard .clr-wizard-stepnav-item {
-  font-weight: 300;
-}
+.form .form-block > label,
+.stack-view,
+.stack-view .stack-block-label,
+.datagrid .datagrid-column .datagrid-filter, .datagrid .datagrid-head .datagrid-row-actions .datagrid-filter,
+.datagrid .datagrid-body .datagrid-row .datagrid-action-overflow,
+.datagrid-foot .column-switch-wrapper .column-switch .switch-header,
+.clr-wizard .clr-wizard-stepnav-item,
 .clr-wizard .clr-wizard-stepnav-item.active {
   font-weight: 300;
 }
