--- a/ui/src/app/views/signed-in/component.html
+++ b/ui/src/app/views/signed-in/component.html
@@ -5,7 +5,7 @@
           style="width: 1.5rem; height: 1.5rem; fill: #6cace4"></clr-icon>
     </div>
     <img [src]="headerImg" class="header-image" routerLink="/">
-    <breadcrumb></breadcrumb>
+    <app-breadcrumb></app-breadcrumb>
   </div>
     <clr-dropdown style="margin-right: 1rem; margin-bottom: 0.5rem;">
     <div style="display: flex; justify-content: space-around; align-items: center" clrDropdownTrigger>
