--- a/ui/src/app/views/workspace-share/component.html
+++ b/ui/src/app/views/workspace-share/component.html
@@ -12,7 +12,7 @@
         <div class="add-by-text-area">
           <label class="text-label" class="collaborator-label">Find Collaborators</label>
           <input type="text" class="input share" name="to-share" autofocus
-              [(ngModel)]="toShare" placeholder="enter name or {{gsuiteDomain}} ID" (ngModelChange)="userNotFound = false"
+              [(ngModel)]="toShare" placeholder="enter {{gsuiteDomain}} ID" (ngModelChange)="userNotFound = false"
               #usernameSharingInput [disabled]="!hasPermission">
           <button type="button" class="btn btn-primary sharing-buttons add-button" (click)="addCollaborator()" [disabled]="!hasPermission">Add</button>
           <div>
