--- a/ui/src/app/cohort-search/criteria-wizard/modifiers/modifiers.component.html
+++ b/ui/src/app/cohort-search/criteria-wizard/modifiers/modifiers.component.html
@@ -6,7 +6,7 @@
       <div class="form-group" formGroupName="AGE_AT_EVENT">
         <label for="age-at-event">Age at Event</label>
         <div class="select">
-          <select formControlName="operator">
+          <select formControlName="operator" (change)="showHide(modifierType.AGEATEVENT)">
             <option *ngFor="let entry of ageAtEventMapEntries" value="{{ entry[0] }}">{{ entry[1] }}</option>
           </select>
         </div>
@@ -16,6 +16,12 @@
           id="age-at-event"
           [min]="-1" [max]="121"
           >
+        <input *ngIf="ageAtEventBetween===true" type="number"
+          formControlName="value1"
+          name="age-at-event"
+          id="age-at-event1"
+          [min]="-1" [max]="121"
+        >
         <button
             type="button"
             class="btn btn-sm btn-link"
@@ -52,7 +58,7 @@
       <div class="form-group" formGroupName="EVENT_DATE">
         <label for="event-date">Date of Event</label>
         <div class="select">
-          <select formControlName="operator">
+          <select formControlName="operator" (change)="showHide(modifierType.EVENTDATE)">
             <option *ngFor="let entry of eventDateMapEntries" value="{{ entry[0] }}">{{ entry[1] }}</option>
           </select>
         </div>
@@ -61,6 +67,11 @@
           name="event-date"
           id="event-date"
           >
+        <input *ngIf="eventDateBetween===true" type="date"
+          formControlName="value1"
+          name="event-date"
+          id="event-date1"
+        >
         <button
             type="button"
             class="btn btn-sm btn-link"
