--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -174,7 +174,7 @@
                 <div>
                   <label class="checkbox-label" (click)="workspace.researchPurpose.containsUnderservedPopulation = !workspace.researchPurpose.containsUnderservedPopulation"><h3>Includes an underserved population</h3></label>
                   <div>
-                    This research will focus on or include findings on distinguishing characteristics related to one or more underserved populations
+                    This research will focus on, or include findings on, distinguishing characteristics related to one or more underserved populations
                   </div>
                 </div>
               </div>
